# instantFSM

./: LICENSE  README.md  instantFSM.h
gtest/: CMakeLists.txt  gtests.cpp  multiTUA.cpp  multiTUB.cpp
samples/: CMakeLists.txt  audioPlayer.cpp  gameState.cpp
